--- a/index.html
+++ b/index.html
@@ -15,13 +15,24 @@
       margin: 0;
     }
     .login-box {
-      background: white;
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      text-align: center;
-      width: 320px;
-    }
+  background: white;
+  padding: 40px;
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  text-align: center;
+  width: 90%;
+  max-width: 400px;
+}
+
+@media (max-width: 480px) {
+  input, button {
+    font-size: 18px;
+  }
+  .login-box {
+    padding: 30px 20px;
+  }
+}
+
     input {
       padding: 12px;
       width: 100%;
@@ -71,7 +82,7 @@
 </head>
 <body>
   <div class="login-box">
-    <h2>เข้าสู่ระบบ</h2>
+    <h2>เข้าสู่ระบบ นักศึกษาจ้างงาน</h2>
     <input type="text" id="username" placeholder="กรอกชื่อของคุณ" />
     <input type="password" id="password" placeholder="กรอกรหัสผ่าน" />
     <button onclick="login()">เข้าสู่ระบบ</button>
