--- a/index.html
+++ b/index.html
@@ -2,37 +2,32 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <title>ล็อกอินด้วย Google Sheet พร้อมรูป</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <title>ล็อกอินด้วย Google Sheet</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
   <style>
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
       font-family: 'Kanit', sans-serif;
       background: #f0f4f8;
       display: flex;
-      height: 100vh;
       justify-content: center;
       align-items: center;
-      margin: 0;
     }
     .login-box {
-  background: white;
-  padding: 40px;
-  border-radius: 20px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-  text-align: center;
-  width: 90%;
-  max-width: 400px;
-}
-
-@media (max-width: 480px) {
-  input, button {
-    font-size: 18px;
-  }
-  .login-box {
-    padding: 30px 20px;
-  }
-}
-
+      background: white;
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      text-align: center;
+      width: 90%;
+      max-width: 400px;
+      box-sizing: border-box;
+      z-index: 1;
+    }
     input {
       padding: 12px;
       width: 100%;
@@ -51,6 +46,7 @@
       cursor: pointer;
       font-size: 16px;
       width: 100%;
+      transition: background 0.3s ease;
     }
     button:hover {
       background: #0056b3;
@@ -60,85 +56,131 @@
       color: red;
       min-height: 20px;
     }
-    #profile {
-      margin-top: 20px;
+
+    /* Spinner */
+    #loader {
       display: none;
-      flex-direction: column;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(255, 255, 255, 0.8);
+      z-index: 9999;
+      justify-content: center;
       align-items: center;
     }
-    #profile img {
-      width: 100px;
-      height: 100px;
+    .spinner {
+      border: 8px solid #f3f3f3;
+      border-top: 8px solid #007BFF;
       border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 10px;
-      border: 3px solid #007BFF;
+      width: 60px;
+      height: 60px;
+      animation: spin 1s linear infinite;
     }
-    #profile .name {
-      font-weight: bold;
-      font-size: 18px;
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    /* Popup */
+    #popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 30px 20px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      z-index: 10001;
+      animation: fadeIn 0.3s ease;
+    }
+    #popup h3 {
+      color: green;
+      font-size: 24px;
+      margin: 0;
+    }
+    #blur-bg {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      backdrop-filter: blur(4px);
+      background: rgba(0, 0, 0, 0.2);
+      z-index: 10000;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translate(-50%, -60%); }
+      to { opacity: 1; transform: translate(-50%, -50%); }
     }
   </style>
 </head>
 <body>
   <div class="login-box">
     <h2>เข้าสู่ระบบ นักศึกษาจ้างงาน</h2>
-    <input type="text" id="username" placeholder="กรอกชื่อของคุณ" />
+    <input type="text" id="user" placeholder="กรอกรหัสผู้ใช้" />
     <input type="password" id="password" placeholder="กรอกรหัสผ่าน" />
     <button onclick="login()">เข้าสู่ระบบ</button>
     <div id="message"></div>
+  </div>
 
-    <div id="profile">
-      <img id="profile-img" src="" alt="รูปโปรไฟล์" />
-      <div class="name" id="profile-name"></div>
-      <div class="position" id="profile-position"></div>
-    </div>
+  <!-- Spinner -->
+  <div id="loader"><div class="spinner"></div></div>
+
+  <!-- Popup -->
+  <div id="blur-bg"></div>
+  <div id="popup">
+    <h3>✅ เข้าสู่ระบบสำเร็จ</h3>
   </div>
 
   <script>
-    // เปลี่ยน URL นี้เป็น URL Web app ของคุณที่ Deploy จาก Google Apps Script
-    const apiUrl = "https://script.google.com/macros/s/AKfycbx_-kjK3nUjFPmrEu_11KmbZ4CGVHq066ZGUzluG-gCpQf9A-PijzimQRmWVHgEBOEl/exec";
+    const apiUrl = "https://script.google.com/macros/s/AKfycbzzrx-bnSeng8HM8HMXL-Sa3zy-Am2Cx0034nBjKkC-SlIkNwIEVZUTn6pMr-2QkIV5hA/exec";
 
     function login() {
-      const username = document.getElementById("username").value.trim();
+      const user = document.getElementById("user").value.trim();
       const password = document.getElementById("password").value.trim();
       const msg = document.getElementById("message");
-      const profileDiv = document.getElementById("profile");
+      const loader = document.getElementById("loader");
+      const popup = document.getElementById("popup");
+      const blurBg = document.getElementById("blur-bg");
 
       msg.textContent = "";
-      profileDiv.style.display = "none";
 
-      if (!username || !password) {
-        msg.textContent = "กรุณากรอกชื่อและรหัสผ่าน";
+      if (!user || !password) {
+        msg.textContent = "กรุณากรอกรหัสผู้ใช้และรหัสผ่าน";
         return;
       }
 
-      fetch(`${apiUrl}?name=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`)
+      loader.style.display = "flex";
+
+      fetch(`${apiUrl}?user=${encodeURIComponent(user)}&password=${encodeURIComponent(password)}`)
         .then(response => response.json())
         .then(data => {
+          loader.style.display = "none";
+
           if (data.status === "success") {
-            localStorage.setItem("username", username);
+            localStorage.setItem("user", user);
+            localStorage.setItem("username", data.name || user);
             localStorage.setItem("position", data.position || "");
             localStorage.setItem("photo_url", data.photo_url || "");
 
-            // แสดงข้อมูลโปรไฟล์
-            document.getElementById("profile-img").src = data.photo_url || "";
-            document.getElementById("profile-name").textContent = username;
-            document.getElementById("profile-position").textContent = data.position || "";
-            profileDiv.style.display = "flex";
+            popup.style.display = "block";
+            blurBg.style.display = "block";
 
-            msg.style.color = "green";
-            msg.textContent = "เข้าสู่ระบบสำเร็จ! กำลังเปลี่ยนหน้า...";
-            
             setTimeout(() => {
+              popup.style.display = "none";
+              blurBg.style.display = "none";
               window.location.href = "dashboard.html";
-            }, 1500);
+            }, 2000);
           } else {
             msg.style.color = "red";
-            msg.textContent = data.message || "ชื่อหรือรหัสผ่านไม่ถูกต้อง";
+            msg.textContent = data.message || "ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง";
           }
         })
         .catch(() => {
+          loader.style.display = "none";
           msg.style.color = "red";
           msg.textContent = "เกิดข้อผิดพลาดในการเชื่อมต่อ";
         });
